# 2017Fall-NoPenNoGain

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
bruce/: compile.sh  main.cpp  main_boost.cpp  trackCam.cpp  trackCam.h  trackCam_boost.cpp
c++/main/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex4_7  ex4_7.c  main.cpp  main_boost.cpp  simpleScan  sisimpleScan.c
c++/trackCam/: .trackCam.h.swp  main.cpp  trackCam.cpp
docs/: _config.yml  index.html
exe2/src/: CMakeCache.txt  CMakeLists.txt  Makefile  calc.c  calc.h  cmake_install.cmake  main.c
main/src/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  trackCam_boost.h
main/src/main/: main.cpp
main/src/trackCam/: trackCam.h
pen/: characteristic.js  main.js
pp/: .main.py.swp  main.py  test.py  test_cam.py  trackCam.py  tracker.py  trans.py
py/: main.py  peri.py
toolbar/: toolbar.pro
toolbar/ble_mouse/: ble_mouse.sln
toolbar/ble_mouse/ble_mouse/: NodejsConsoleApp2.njsproj  README.md  app.js  characteristic.js  package.json
toolbar/headfile/: paint.h  paintscene.h  toolbar.h
toolbar/image_qrc/: image.qrc
toolbar/sourcecode/: main.cpp  paint.cpp  paintscene.cpp  toolbar.cpp
toolbar/ui/: paint.ui  toolbar.ui
trackCam/: run  trackCam.cpp  trackCam.h
trackCam_boost/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_boost.sh  main_boost.cpp  run  trackCam  trackCam_boost.cpp  trackCam_boost.h
trackCam_boost/src/: main_boost.cpp  trackCam_boost.cpp
